[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aax2mp3"
version = "0.1.0"
description = "Convert Audible AAX audiobook files to MP3 format with automatic chapter splitting"
readme = "README.md"
requires-python = ">=3.8"
license = "WTFPL"
authors = [
    { name = "Chris Kuethe" },
]
keywords = ["audible", "aax", "mp3", "audiobook", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = [
    "setproctitle",
]

[project.optional-dependencies]
progress = [
    "tqdm",
]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.scripts]
aax2mp3 = "aax2mp3:main"

[project.urls]
Homepage = "https://github.com/ckuethe/aax2mp3_py"
Repository = "https://github.com/ckuethe/aax2mp3_py"

[tool.hatchling.build.targets.wheel]
packages = ["."]
only-include = ["aax2mp3.py"]

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.ruff]
line-length = 120
target-version = "py38"

